@@ -1,5 +1,8 @@
 2011-05-25  Jason Merrill  <jason@redhat.com>
 
+	PR c++/46696
+	* typeck.c (cp_build_modify_expr): Check DECL_DEFAULTED_FN.
+
 	PR c++/47184
 	* parser.c (cp_parser_parameter_declaration): Recognize
 	list-initialization.
